spark-kubernetes/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
    - name: rest
      port: 6066
      targetPort: 6066
  selector:
    component: spark-master
