spark-kubernetes/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: spark-kubernetes
    http:
      paths:
        - path: /v1/submissions
          pathType: Prefix
          backend:
            service:
              name: spark-master
              port:
                number: 6066
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spark-master
              port:
                number: 8080
